웨이팅관련, 주문관련 수정
웨이팅관련, 주문관련 수정

--- a/src/pages/infomodal/infomodal.html
+++ b/src/pages/infomodal/infomodal.html
@@ -49,7 +49,7 @@ top: 10%;" padding>
                         color: white;
                         top: 30%;
               ">OFF</span>
-                <ion-toggle style="
+                <ion-toggle  [(ngModel)]="booleanValue2" style="
                 position: absolute;
                 right: 12%;
               " slot="end" (ionChange)="myChange2($event)"  ></ion-toggle> <span style="    float: right;
