--- a/src/pages/orderdetail/orderdetail.html
+++ b/src/pages/orderdetail/orderdetail.html
@@ -19,14 +19,14 @@ background: white;" padding>
     <div class="name-keys">
       <span>룸NO</span>
       <span>담당자</span>
-      <span>인원</span>
+      <span>방인원</span>
       <span>WT</span>
       <span>주문</span>
     </div>
     <div (click)="editing(a);"  class="datas">
       <span>{{a.name}}</span>
       <span>{{a.incharge}}</span>
-      <span>{{a.numofpeople}} 인 </span>
+      <span>{{a.max_people_count}} 인 </span>
       <span>{{a.wt}}</span>
       <span>주문</span>
     </div>
